# backend

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  websocket-test.html
alembic/: env.py
alembic/versions/: 06920332f8bc_test_our_alembic_v1.py  4dc09dcc1f2a_add_messages_and_deliveries.py  9ae4b4c847b8_first_create_our_database.py  b2c4d6e8f0a1_sync_chats_and_participants_schema.py  f3a8b1c2d4e5_add_user_profile_columns.py
src/: main.py
src/api/: deps.py
src/api/v1/endpoints/: auth.py  chats.py  users.py  websocket.py
src/core/: config.py  database.py  encryption.py  redis_client.py  security.py  websocket_manager.py
src/models/: __init__.py  chat.py  message.py  user.py
src/schemas/: __init__.py  chat.py  message.py  user.py  websocket.py
src/services/: chat_service.py  email_service.py  message_service.py  otp_service.py  user_service.py
